the_project/manifests/nats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
  namespace: project
  labels:
    app: nats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
      - name: nats
        image: nats:2.9-alpine
        ports:
        - containerPort: 4222
---
apiVersion: v1
kind: Service
metadata:
  name: my-nats
  namespace: project
spec:
  selector:
    app: nats
  ports:
  - name: client
    port: 4222
    targetPort: 4222
